BrandService tests